<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnCompare"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtNumber"
        android:layout_gravity="end"
        android:text="@string/btnValider" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/viewResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/txtNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/lblResult"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pgbScore"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/counter"
        android:layout_marginTop="25dp"
        android:max="10"
        android:progress="0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/NumberPicked"
        android:layout_below="@+id/pgbScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblHistory"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:text="@string/viewHistory"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
