<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true" android:alwaysDrawnWithCache="false">

    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/sadnesss5"
        android:contentDescription="@string/sadness"
        android:scaleType="center" />

    <Button
        android:id="@+id/btnRestart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_above="@+id/btnRq"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:background="@android:color/holo_purple"
        android:text="@string/rejouer" />

    <Button
        android:id="@+id/btnRq"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginBottom="39dp"
        android:background="@android:color/holo_purple"
        android:text="@string/ragequit"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameLost"
        android:textColor="#FFFFFF"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:background="@drawable/rounded_corner"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
